feat: finish expert
